исправление todo работа json добавление очистки файлов пользователя и собственные категории кнопками